src/parser.rs
//! Recursive-descent parser. See `lumen-2s7` and `docs/grammar.ebnf`.
//!
//! Consumes a token stream from [`crate::lexer`] and produces an
//! [`ast::Module`]. Every AST node carries a span for downstream error
//! reporting.
//!
//! ## Structure
//!
//! The parser is organized top-down following the EBNF, one method per
//! production. A single [`Parser`] struct tracks the token cursor. Lookahead
//! is bounded to two tokens (`peek` + `peek_at(1)`).
//!
//! ## Disambiguations
//!
//! - `IDENT = expr` at statement position is parsed as an assignment rather
//!   than an expression-statement. We check with two-token lookahead for
//!   `IDENT` followed by a bare `=` (not `==`, `=>`).
//! - Struct literals (`Foo { ... }`) are disabled in the "head" position of
//!   `if`, `match`, and `for` conditions so that the opening `{` is
//!   unambiguously the body. Users who need a struct literal there must
//!   parenthesize it, matching Rust's convention.
//! - The trailing statement of a block, if it is a bare expression, is
//!   lifted to the block's `tail` expression so the block has a value.

use crate::ast::*;
use crate::lexer::{Token, TokenKind};
use crate::span::Span;

/// A parse-time failure with source location and a human-readable message.
#[derive(Clone, Debug)]
pub struct ParseError {
    pub span: Span,
    pub message: String,
}

impl std::fmt::Display for ParseError {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        write!(f, "{}:{}: {}", self.span.line, self.span.col, self.message)
    }
}

impl std::error::Error for ParseError {}

/// Parse a full token stream into a [`Module`].
pub fn parse(tokens: Vec<Token>) -> Result<Module, ParseError> {
    let mut p = Parser::new(tokens);
    p.parse_module()
}

/// Parse a single expression from a snippet of source — used to compile
/// the body of a `\{...}` interpolation. Errors carry the surrounding
/// string literal's span so the user sees a location they recognize.
fn parse_interp_expr(source: &str, _line: u32, _col: u32, str_span: Span) -> Result<Expr, ParseError> {
    let tokens = crate::lexer::lex(source).map_err(|e| ParseError {
        span: str_span,
        message: format!("in string interpolation: {}", e.message),
    })?;
    let mut p = Parser::new(tokens);
    let expr = p.parse_expr(ExprCtx::normal()).map_err(|e| ParseError {
        span: str_span,
        message: format!("in string interpolation: {}", e.message),
    })?;
    if !matches!(p.peek_kind(), TokenKind::Eof) {
        return Err(ParseError {
            span: str_span,
            message: "in string interpolation: unexpected trailing tokens after expression".into(),
        });
    }
    Ok(expr)
}

// ---------------------------------------------------------------------------
// Parser state
// ---------------------------------------------------------------------------

struct Parser {
    tokens: Vec<Token>,
    pos: usize,
}

/// Two bits of parser state threaded through expression parsing:
/// whether struct literals are allowed in this position.
#[derive(Clone, Copy)]
struct ExprCtx {
    allow_struct_lit: bool,
}

impl ExprCtx {
    fn normal() -> Self {
        Self {
            allow_struct_lit: true,
        }
    }
    fn no_struct() -> Self {
        Self {
            allow_struct_lit: false,
        }
    }
}

impl Parser {
    fn new(tokens: Vec<Token>) -> Self {
        Self { tokens, pos: 0 }
    }

    // --- Token cursor -----------------------------------------------------

    fn peek(&self) -> &Token {
        &self.tokens[self.pos]
    }

    fn peek_kind(&self) -> &TokenKind {
        &self.tokens[self.pos].kind
    }

    fn peek_at(&self, offset: usize) -> Option<&Token> {
        self.tokens.get(self.pos + offset)
    }

    fn bump(&mut self) -> Token {
        let tok = self.tokens[self.pos].clone();
        if !matches!(tok.kind, TokenKind::Eof) {
            self.pos += 1;
        }
        tok
    }

    fn eat(&mut self, kind: &TokenKind) -> Option<Token> {
        if std::mem::discriminant(self.peek_kind()) == std::mem::discriminant(kind) {
            Some(self.bump())
        } else {
            None
        }
    }

    fn expect(&mut self, kind: &TokenKind, what: &str) -> Result<Token, ParseError> {
        if std::mem::discriminant(self.peek_kind()) == std::mem::discriminant(kind) {
            Ok(self.bump())
        } else {
            Err(self.error_here(format!(
                "expected {what}, found {}",
                describe_token(self.peek_kind())
            )))
        }
    }

    fn error_here(&self, message: String) -> ParseError {
        ParseError {
            span: self.peek().span,
            message,
        }
    }

    fn at_eof(&self) -> bool {
        matches!(self.peek_kind(), TokenKind::Eof)
    }

    // --- Top level --------------------------------------------------------

    fn parse_module(&mut self) -> Result<Module, ParseError> {
        let mut imports = Vec::new();
        while matches!(self.peek_kind(), TokenKind::Import) {
            imports.push(self.parse_import()?);
        }

        let mut items = Vec::new();
        while !self.at_eof() {
            items.push(self.parse_item()?);
        }

        Ok(Module { imports, items })
    }

    fn parse_import(&mut self) -> Result<Import, ParseError> {
        let start = self.peek().span;
        self.expect(&TokenKind::Import, "`import`")?;

        let mut path = Vec::new();
        let head = self.expect_ident("module name after `import`")?;
        path.push(head.0);

        while self.eat(&TokenKind::Slash).is_some() {
            let seg = self.expect_ident("module name segment after `/`")?;
            path.push(seg.0);
        }

        // Optional alias: `import std/raylib as rl`
        let alias = if matches!(self.peek_kind(), TokenKind::As) {
            self.bump();
            Some(self.expect_ident("alias name after `as`")?.0)
        } else {
            None
        };

        let end = self.tokens[self.pos.saturating_sub(1)].span;
        Ok(Import {
            path,
            alias,
            span: merge(start, end),
        })
    }

    fn parse_item(&mut self) -> Result<Item, ParseError> {
        match self.peek_kind() {
            TokenKind::Fn => self.parse_fn_decl().map(Item::Fn),
            TokenKind::Type => self.parse_type_decl().map(Item::Type),
            TokenKind::Extern => self.parse_extern_fn_decl().map(Item::ExternFn),
            TokenKind::Actor => self.parse_actor_decl().map(Item::Actor),
            TokenKind::Msg => self.parse_msg_handler().map(Item::MsgHandler),
            other => Err(self.error_here(format!(
                "expected `fn`, `type`, `extern`, `actor`, or `msg` at top level, found {}",
                describe_token(other)
            ))),
        }
    }

    fn parse_extern_fn_decl(&mut self) -> Result<ExternFnDecl, ParseError> {
        let start = self.peek().span;
        self.expect(&TokenKind::Extern, "`extern`")?;
        self.expect(&TokenKind::Fn, "`fn` after `extern`")?;
        let (name, name_span) = self.expect_ident("extern function name")?;

        self.expect(&TokenKind::LParen, "`(` after function name")?;
        let mut params = Vec::new();
        if !matches!(self.peek_kind(), TokenKind::RParen) {
            loop {
                params.push(self.parse_param()?);
                if self.eat(&TokenKind::Comma).is_none() {
                    break;
                }
            }
        }
        self.expect(&TokenKind::RParen, "`)` to close parameter list")?;

        self.expect(&TokenKind::Colon, "`:` before return type")?;
        let return_type = self.parse_type()?;
        let mut end = return_type.span;

        // Optional link name: `link "c_symbol_name"`
        let link_name = if matches!(self.peek_kind(), TokenKind::Ident(ref s) if s == "link") {
            self.bump(); // consume `link`
            match self.peek_kind().clone() {
                TokenKind::StringLit(s) => {
                    let tok = self.bump();
                    end = tok.span;
                    Some(s)
                }
                _ => return Err(self.error_here("expected string literal after `link`".into())),
            }
        } else {
            None
        };

        Ok(ExternFnDecl {
            name,
            name_span,
            params,
            return_type,
            link_name,
            span: merge(start, end),
        })
    }

    fn parse_actor_decl(&mut self) -> Result<ActorDecl, ParseError> {
        let start = self.peek().span;
        self.expect(&TokenKind::Actor, "`actor`")?;
        let (name, name_span) = self.expect_ident("actor name")?;
        let fields = self.parse_struct_body()?;
        let end = self.tokens[self.pos.saturating_sub(1)].span;
        Ok(ActorDecl {
            name,
            name_span,
            fields,
            span: merge(start, end),
        })
    }

    fn parse_msg_handler(&mut self) -> Result<MsgHandlerDecl, ParseError> {
        let start = self.peek().span;
        self.expect(&TokenKind::Msg, "`msg`")?;
        let (actor_name, _) = self.expect_ident("actor name")?;
        self.expect(&TokenKind::Dot, "`.` after actor name")?;
        let (name, name_span) = self.expect_ident("message handler name")?;

        self.expect(&TokenKind::LParen, "`(`")?;
        // First param must be `self` (consumed but not stored).
        let self_tok = self.expect_ident("`self` parameter")?;
        if self_tok.0 != "self" {
            return Err(ParseError {
                span: self_tok.1,
                message: "first parameter of a msg handler must be `self`".into(),
            });
        }
        let mut params = Vec::new();
        while self.eat(&TokenKind::Comma).is_some() {
            if matches!(self.peek_kind(), TokenKind::RParen) {
                break;
            }
            params.push(self.parse_param()?);
        }
        self.expect(&TokenKind::RParen, "`)`")?;

        self.expect(&TokenKind::Colon, "`:` before return type")?;
        let return_type = self.parse_type()?;

        let body = self.parse_block()?;
        let end = body.span;
        Ok(MsgHandlerDecl {
            actor_name,
            name,
            name_span,
            params,
            return_type,
            body,
            span: merge(start, end),
        })
    }

    // --- Function declarations --------------------------------------------

    fn parse_fn_decl(&mut self) -> Result<FnDecl, ParseError> {
        let start = self.peek().span;
        self.expect(&TokenKind::Fn, "`fn`")?;
        let (name, name_span) = self.expect_ident("function name")?;

        // Optional generic type parameters: fn name<T, U>(...)
        let mut type_params = Vec::new();
        if matches!(self.peek_kind(), TokenKind::Lt) {
            self.bump();
            loop {
                let (tp, _) = self.expect_ident("type parameter name")?;
                type_params.push(tp);
                if self.eat(&TokenKind::Comma).is_none() {
                    break;
                }
            }
            self.expect(&TokenKind::Gt, "`>` to close type parameters")?;
        }

        self.expect(&TokenKind::LParen, "`(` after function name")?;
        let mut params = Vec::new();
        if !matches!(self.peek_kind(), TokenKind::RParen) {
            loop {
                params.push(self.parse_param()?);
                if self.eat(&TokenKind::Comma).is_none() {
                    break;
                }
            }
        }
        self.expect(&TokenKind::RParen, "`)` to close parameter list")?;

        self.expect(&TokenKind::Colon, "`:` before return type")?;
        let return_type = self.parse_type()?;

        // Optional effect annotation. `io` and `pure` are contextual keywords
        // — they lex as plain identifiers so they can also be used as module
        // names (`std/io`) and stdlib values (`io.println(...)`). We only
        // recognize them here, between the return type and the opening brace
        // of the body.
        let effect = match self.peek_kind() {
            TokenKind::Ident(name) if name == "io" && self.peek_at(1).is_some_and(|t| matches!(t.kind, TokenKind::LBrace)) => {
                self.bump();
                Effect::Io
            }
            TokenKind::Ident(name) if name == "pure" && self.peek_at(1).is_some_and(|t| matches!(t.kind, TokenKind::LBrace)) => {
                self.bump();
                Effect::Pure
            }
            _ => Effect::Pure,
        };

        let body = self.parse_block()?;
        let end = body.span;

        Ok(FnDecl {
            name,
            name_span,
            type_params,
            params,
            return_type,
            effect,
            body,
            span: merge(start, end),
        })
    }

    fn parse_param(&mut self) -> Result<Param, ParseError> {
        let (name, name_span) = self.expect_ident("parameter name")?;
        self.expect(&TokenKind::Colon, "`:` before parameter type")?;
        let ty = self.parse_type()?;
        let span = merge(name_span, ty.span);
        Ok(Param { name, ty, span })
    }

    // --- Type declarations ------------------------------------------------

    fn parse_type_decl(&mut self) -> Result<TypeDecl, ParseError> {
        let start = self.peek().span;
        self.expect(&TokenKind::Type, "`type`")?;
        let (name, name_span) = self.expect_ident("type name")?;

        // Optional generic type parameters: type Pair<A, B> = ...
        let mut type_params = Vec::new();
        if matches!(self.peek_kind(), TokenKind::Lt) {
            self.bump();
            loop {
                let (tp, _) = self.expect_ident("type parameter name")?;
                type_params.push(tp);
                if self.eat(&TokenKind::Comma).is_none() {
                    break;
                }
            }
            self.expect(&TokenKind::Gt, "`>` to close type parameters")?;
        }

        self.expect(&TokenKind::Eq, "`=` in type declaration")?;

        // Sum type body starts with `|` or an IDENT followed by another `|`
        // or EOF/next decl. Struct body starts with `{`. A sum with a single
        // variant and no `|` looks like a struct-less variant — but the
        // grammar makes this ambiguous; we commit to "if next is `{`, it's a
        // struct body; otherwise sum body." Users can always write a leading
        // `|` to disambiguate.
        let body = match self.peek_kind() {
            TokenKind::LBrace => TypeBody::Struct(self.parse_struct_body()?),
            _ => TypeBody::Sum(self.parse_sum_body()?),
        };

        let end = self.tokens[self.pos.saturating_sub(1)].span;
        Ok(TypeDecl {
            name,
            name_span,
            type_params,
            body,
            span: merge(start, end),
        })
    }

    fn parse_struct_body(&mut self) -> Result<Vec<Field>, ParseError> {
        self.expect(&TokenKind::LBrace, "`{` for struct body")?;
        let mut fields = Vec::new();
        if !matches!(self.peek_kind(), TokenKind::RBrace) {
            loop {
                fields.push(self.parse_field()?);
                if self.eat(&TokenKind::Comma).is_none() {
                    break;
                }
                // allow trailing comma
                if matches!(self.peek_kind(), TokenKind::RBrace) {
                    break;
                }
            }
        }
        self.expect(&TokenKind::RBrace, "`}` to close struct body")?;
        Ok(fields)
    }

    fn parse_field(&mut self) -> Result<Field, ParseError> {
        let (name, name_span) = self.expect_ident("field name")?;
        self.expect(&TokenKind::Colon, "`:` before field type")?;
        let ty = self.parse_type()?;
        Ok(Field {
            name,
            span: merge(name_span, ty.span),
            ty,
        })
    }

    fn parse_sum_body(&mut self) -> Result<Vec<Variant>, ParseError> {
        // Optional leading `|` (Rust-style).
        self.eat(&TokenKind::Pipe);

        let mut variants = Vec::new();
        variants.push(self.parse_variant()?);
        while self.eat(&TokenKind::Pipe).is_some() {
            variants.push(self.parse_variant()?);
        }
        Ok(variants)
    }

    fn parse_variant(&mut self) -> Result<Variant, ParseError> {
        let (name, name_span) = self.expect_ident("variant name")?;
        let payload = match self.peek_kind() {
            TokenKind::LBrace => Some(VariantPayload::Named(self.parse_struct_body()?)),
            TokenKind::LParen => {
                self.bump();
                let mut tys = Vec::new();
                if !matches!(self.peek_kind(), TokenKind::RParen) {
                    loop {
                        tys.push(self.parse_type()?);
                        if self.eat(&TokenKind::Comma).is_none() {
                            break;
                        }
                    }
                }
                self.expect(&TokenKind::RParen, "`)` to close positional variant")?;
                Some(VariantPayload::Positional(tys))
            }
            _ => None,
        };
        let end = self.tokens[self.pos.saturating_sub(1)].span;
        Ok(Variant {
            name,
            payload,
            span: merge(name_span, end),
        })
    }

    // --- Types ------------------------------------------------------------

    fn parse_type(&mut self) -> Result<Type, ParseError> {
        // Tuple type: (T1, T2, ...)
        if matches!(self.peek_kind(), TokenKind::LParen) {
            let start = self.bump().span;
            let mut elems = Vec::new();
            if !matches!(self.peek_kind(), TokenKind::RParen) {
                loop {
                    elems.push(self.parse_type()?);
                    if self.eat(&TokenKind::Comma).is_none() {
                        break;
                    }
                }
            }
            let end = self.expect(&TokenKind::RParen, "`)` to close tuple type")?.span;
            return Ok(Type {
                kind: TypeKind::Tuple(elems),
                span: merge(start, end),
            });
        }

        // Function pointer type: fn(T1, T2): R
        if matches!(self.peek_kind(), TokenKind::Fn) {
            let start = self.bump().span;
            self.expect(&TokenKind::LParen, "`(` after `fn` in function pointer type")?;
            let mut params = Vec::new();
            if !matches!(self.peek_kind(), TokenKind::RParen) {
                loop {
                    params.push(self.parse_type()?);
                    if self.eat(&TokenKind::Comma).is_none() {
                        break;
                    }
                }
            }
            self.expect(&TokenKind::RParen, "`)` to close function pointer type params")?;
            self.expect(&TokenKind::Colon, "`:` before function pointer return type")?;
            let ret = self.parse_type()?;
            let end = ret.span;
            return Ok(Type {
                kind: TypeKind::FnPtr { params, ret: Box::new(ret) },
                span: merge(start, end),
            });
        }

        let (name, name_span) = match self.peek_kind() {
            TokenKind::Unit => {
                let tok = self.bump();
                return Ok(Type {
                    kind: TypeKind::Named {
                        name: "unit".into(),
                        args: Vec::new(),
                    },
                    span: tok.span,
                });
            }
            TokenKind::Ident(_) => self.expect_ident("type name")?,
            other => {
                return Err(self.error_here(format!(
                    "expected a type name, found {}",
                    describe_token(other)
                )));
            }
        };

        let mut args = Vec::new();
        let mut end = name_span;
        if matches!(self.peek_kind(), TokenKind::Lt) {
            self.bump();
            loop {
                args.push(self.parse_type()?);
                if self.eat(&TokenKind::Comma).is_none() {
                    break;
                }
            }
            let gt = self.expect(&TokenKind::Gt, "`>` to close type arguments")?;
            end = gt.span;
        }

        Ok(Type {
            kind: TypeKind::Named { name, args },
            span: merge(name_span, end),
        })
    }

    // --- Blocks and statements --------------------------------------------

    fn parse_block(&mut self) -> Result<Block, ParseError> {
        let start = self.peek().span;
        self.expect(&TokenKind::LBrace, "`{` to open block")?;

        let mut stmts = Vec::new();
        while !matches!(self.peek_kind(), TokenKind::RBrace | TokenKind::Eof) {
            stmts.push(self.parse_stmt()?);
        }
        let end = self.expect(&TokenKind::RBrace, "`}` to close block")?.span;

        // Lift a trailing expression statement into `tail`, matching the
        // grammar's `{ stmt* tail_expr? }` shape.
        let tail = match stmts.last().map(|s| &s.kind) {
            Some(StmtKind::Expr(_)) => {
                let last = stmts.pop().unwrap();
                if let StmtKind::Expr(e) = last.kind {
                    Some(Box::new(e))
                } else {
                    unreachable!()
                }
            }
            _ => None,
        };

        Ok(Block {
            stmts,
            tail,
            span: merge(start, end),
        })
    }

    fn parse_stmt(&mut self) -> Result<Stmt, ParseError> {
        match self.peek_kind() {
            TokenKind::Let => self.parse_let_stmt(),
            TokenKind::Var => self.parse_var_stmt(),
            TokenKind::For => self.parse_for_stmt(),
            TokenKind::Return => self.parse_return_stmt(),
            TokenKind::Ident(_) if self.is_assign_ahead() => self.parse_assign_stmt(),
            _ => {
                let start = self.peek().span;
                let expr = self.parse_expr(ExprCtx::normal())?;
                let span = merge(start, expr.span);
                Ok(Stmt {
                    kind: StmtKind::Expr(expr),
                    span,
                })
            }
        }
    }

    /// True iff the current token is an IDENT followed by `=`, `+=`, `-=`,
    /// or `*=` (not `==`, `=>`).
    fn is_assign_ahead(&self) -> bool {
        let Some(next) = self.peek_at(1) else {
            return false;
        };
        matches!(next.kind, TokenKind::Eq | TokenKind::PlusEq | TokenKind::MinusEq | TokenKind::StarEq)
    }

    fn parse_let_stmt(&mut self) -> Result<Stmt, ParseError> {
        let start = self.peek().span;
        self.expect(&TokenKind::Let, "`let`")?;
        // Destructuring let: `let (a, b) = expr`
        if matches!(self.peek_kind(), TokenKind::LParen) {
            self.bump();
            let mut names = Vec::new();
            loop {
                let (name, _) = self.expect_ident("binding name in tuple destructure")?;
                names.push(name);
                if self.eat(&TokenKind::Comma).is_none() {
                    break;
                }
            }
            self.expect(&TokenKind::RParen, "`)` to close destructuring")?;
            self.expect(&TokenKind::Eq, "`=` in let binding")?;
            let value = self.parse_expr(ExprCtx::normal())?;
            let span = merge(start, value.span);
            return Ok(Stmt {
                kind: StmtKind::LetTuple { names, value },
                span,
            });
        }
        let (name, _) = self.expect_ident("binding name")?;
        let ty = if self.eat(&TokenKind::Colon).is_some() {
            Some(self.parse_type()?)
        } else {
            None
        };
        self.expect(&TokenKind::Eq, "`=` in let binding")?;
        let value = self.parse_expr(ExprCtx::normal())?;
        let span = merge(start, value.span);
        Ok(Stmt {
            kind: StmtKind::Let { name, ty, value },
            span,
        })
    }

    fn parse_var_stmt(&mut self) -> Result<Stmt, ParseError> {
        let start = self.peek().span;
        self.expect(&TokenKind::Var, "`var`")?;
        let (name, _) = self.expect_ident("binding name")?;
        let ty = if self.eat(&TokenKind::Colon).is_some() {
            Some(self.parse_type()?)
        } else {
            None
        };
        self.expect(&TokenKind::Eq, "`=` in var binding")?;
        let value = self.parse_expr(ExprCtx::normal())?;
        let span = merge(start, value.span);
        Ok(Stmt {
            kind: StmtKind::Var { name, ty, value },
            span,
        })
    }

    fn parse_assign_stmt(&mut self) -> Result<Stmt, ParseError> {
        let (name, name_span) = self.expect_ident("assignment target")?;
        // Check for compound assignment (+=, -=, *=) and desugar.
        let compound_op = match self.peek_kind() {
            TokenKind::PlusEq => { self.bump(); Some(BinOp::Add) }
            TokenKind::MinusEq => { self.bump(); Some(BinOp::Sub) }
            TokenKind::StarEq => { self.bump(); Some(BinOp::Mul) }
            _ => { self.expect(&TokenKind::Eq, "`=` in assignment")?; None }
        };
        let rhs = self.parse_expr(ExprCtx::normal())?;
        let value = if let Some(op) = compound_op {
            // Desugar: `x += e` → `x = x + e`
            let lhs = Expr { kind: ExprKind::Ident(name.clone()), span: name_span };
            let span = merge(name_span, rhs.span);
            Expr {
                kind: ExprKind::Binary { op, lhs: Box::new(lhs), rhs: Box::new(rhs) },
                span,
            }
        } else {
            rhs
        };
        let span = merge(name_span, value.span);
        Ok(Stmt {
            kind: StmtKind::Assign { name, value },
            span,
        })
    }

    fn parse_for_stmt(&mut self) -> Result<Stmt, ParseError> {
        let start = self.peek().span;
        self.expect(&TokenKind::For, "`for`")?;
        let (binder, _) = self.expect_ident("loop binding")?;
        self.expect(&TokenKind::In, "`in` after loop binding")?;
        // Struct literals are disabled in the iterator expression so the
        // opening brace of the loop body is unambiguous.
        let iter = self.parse_expr(ExprCtx::no_struct())?;
        let body = self.parse_block()?;
        let span = merge(start, body.span);
        Ok(Stmt {
            kind: StmtKind::For { binder, iter, body },
            span,
        })
    }

    fn parse_return_stmt(&mut self) -> Result<Stmt, ParseError> {
        let start = self.peek().span;
        self.expect(&TokenKind::Return, "`return`")?;
        let value = match self.peek_kind() {
            TokenKind::RBrace | TokenKind::Eof => None,
            _ => Some(self.parse_expr(ExprCtx::normal())?),
        };
        let end = value
            .as_ref()
            .map(|e| e.span)
            .unwrap_or(start);
        Ok(Stmt {
            kind: StmtKind::Return(value),
            span: merge(start, end),
        })
    }

    // --- Expressions ------------------------------------------------------

    fn parse_expr(&mut self, ctx: ExprCtx) -> Result<Expr, ParseError> {
        match self.peek_kind() {
            TokenKind::If => self.parse_if_expr(),
            TokenKind::Match => self.parse_match_expr(),
            TokenKind::Spawn => self.parse_spawn_expr(),
            TokenKind::Send => self.parse_send_expr(),
            TokenKind::Ask => self.parse_ask_expr(),
            _ => self.parse_or_expr(ctx),
        }
    }

    fn parse_spawn_expr(&mut self) -> Result<Expr, ParseError> {
        let start = self.peek().span;
        self.expect(&TokenKind::Spawn, "`spawn`")?;
        let (name, _name_span) = self.expect_ident("actor type name")?;
        // Parse struct literal body.
        self.expect(&TokenKind::LBrace, "`{` for initial state")?;
        let mut fields = Vec::new();
        if !matches!(self.peek_kind(), TokenKind::RBrace) {
            loop {
                fields.push(self.parse_field_init()?);
                if self.eat(&TokenKind::Comma).is_none() {
                    break;
                }
                if matches!(self.peek_kind(), TokenKind::RBrace) {
                    break;
                }
            }
        }
        let end = self.expect(&TokenKind::RBrace, "`}`")?.span;
        Ok(Expr {
            kind: ExprKind::Spawn {
                actor_name: name,
                fields,
            },
            span: merge(start, end),
        })
    }

    fn parse_send_expr(&mut self) -> Result<Expr, ParseError> {
        let start = self.peek().span;
        self.expect(&TokenKind::Send, "`send`")?;
        let handle = self.parse_postfix_expr(ExprCtx::no_struct())?;
        // The postfix chain should end with a method call. Extract it.
        match handle.kind {
            ExprKind::MethodCall {
                receiver,
                method,
                args,
            } => Ok(Expr {
                kind: ExprKind::Send {
                    handle: receiver,
                    method,
                    args,
                },
                span: merge(start, handle.span),
            }),
            _ => Err(ParseError {
                span: handle.span,
                message: "expected `send handle.method(args)`".into(),
            }),
        }
    }

    fn parse_ask_expr(&mut self) -> Result<Expr, ParseError> {
        let start = self.peek().span;
        self.expect(&TokenKind::Ask, "`ask`")?;
        let handle = self.parse_postfix_expr(ExprCtx::no_struct())?;
        match handle.kind {
            ExprKind::MethodCall {
                receiver,
                method,
                args,
            } => Ok(Expr {
                kind: ExprKind::Ask {
                    handle: receiver,
                    method,
                    args,
                },
                span: merge(start, handle.span),
            }),
            _ => Err(ParseError {
                span: handle.span,
                message: "expected `ask handle.method(args)`".into(),
            }),
        }
    }
